<resources>
    <string name="app_name">Brides &amp; Grooms</string>
    <string name="newevent_eventnameinput_en">Enter Event name</string>
    <string name="newevent_eventdateinput_en">Select Event date</string>
    <string name="newevent_eventtimeinput_en">Select Event time</string>
    <string name="newevent_eventlocationinput_en">Select Event location</string>
    <string name="title_activity_maps">Map</string>
    <string name="privacypolicy" translatable="false">https://teacherjoseluis.wixsite.com/bridesandgrooms</string>
    <string name="termsandconditions" translatable="false">https://brides-grooms.flycricket.io/terms.html</string>
    <string name="facebook_app_id" translatable="false">420436362323049</string>
    <string name="success_email_login">Successful Email Login</string>
    <string name="notverified_email_login">Your email account has not been verified</string>
    <string name="success_logout">Successful Logout</string>
    <string name="success_account_verification">Your account was successfully verified</string>
    <string name="error_valid_emailaccount">A valid email account is required</string>
    <string name="welcome_message">Welcome Back!</string>
    <string name="onboarding_message">Welcome, we\'ll need to create your account</string>
    <string name="login_error_message">There was an error in the log in</string>
    <string name="email_signup_success">Account was successfully created</string>
    <string name="password_requiredformat">The required formatting for the password is 8 characters, 1 upper case, 1 number and 1 symbol</string>
    <string name="passwords_dontmatch">Both passwords are not matching</string>
    <string name="error_shortnameinput">What\'s your name?</string>
    <string name="error_eventnameinput">What is the name of your Event?</string>
    <string name="error_eventdateinput">What is the date of your Event?</string>
    <string name="error_eventtimeinput">At what time is your Event?</string>
    <string name="failed_email_login">There was a problem trying to log in or the account does not exist</string>
    <string name="error_emailaccountexists">The email you are trying to use already exists</string>
    <string name="error_emailsignup">There was a problem tryng in the Sign Up</string>
    <string name="congratulations">Congratulations!</string>
    <string name="weddingday">Today is your wedding day</string>
    <string name="great">Great!</string>
    <string name="myeventtitle">My Wedding</string>
    <string name="logoff">Log off</string>
    <string name="logoff_question">Do you want to log off?</string>
    <string name="accept">Accept</string>
    <string name="error_tasknameinput">Name is required!</string>
    <string name="error_invalidnameinput">Name should contain more than 4 letters and not special characters or symbols</string>
    <string name="error_taskdateinput">Date is required!</string>
    <string name="error_taskbudgetinput">Amount is required!</string>
    <string name="error_taskcategoryinput">Category is required!</string>
    <string name="delete_message">Delete entry</string>
    <string name="delete_entry">Are you sure you want to delete this?</string>
    <string name="error_invaliddate">Date is invalid!</string>
    <string name="vendornotfound">Vendor was not found</string>
    <string name="newvendor_title">New Vendor</string>
    <string name="requestinfo">Request for Information</string>
    <string name="error_noemailclient">There are no email client installed on your device</string>
    <string name="error_vendorphoneinput">Phone is required!</string>
    <string name="error_vendorphoneinputformat">Phone cannot contain letters or special characters</string>
    <string name="title_delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="error_vendorwithpayments">Vendor can\'t be removed as there are still payments associated</string>
    <string name="title_contacts">Contacts</string>
    <string name="todo">To Do</string>
    <string name="done">Done</string>
    <string name="duenext">Due next tasks</string>
    <string name="view">view</string>
    <string name="payments">Payments</string>
    <string name="payment">Payment</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_payments">Tasks &amp; Payments</string>
    <string name="blog">Blog</string>
    <string name="post">Post</string>
    <string name="error_gettingdata">There was an error trying to get Event data</string>
    <string name="success_eventchanges">Event changes saved successfully</string>
    <string name="blogimage">Blog Image</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="task">Task</string>
    <string name="guests">Guests</string>
    <string name="notes">Notes</string>
    <string name="categoryimage">Category Image</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="taskpendingimage">Task Pending Image</string>
    <string name="_0" translatable="false">0</string>
    <string name="taskdoneimage">Task Done Image</string>
    <string name="taskbudgetimage">Task Budget Image</string>
    <string name="card_title">Card Title</string>
    <string name="contactavatar">Contact Avatar</string>
    <string name="newtaskactionbutton">New Task Action Button</string>
    <string name="loading_blog_posts_to_show">Loading blog posts to show…</string>
    <string name="there_are_no_guests_yet_invited">There are no guests yet invited</string>
    <string name="emptystate">Empty State</string>
    <string name="newtaskbutton">New Task Button</string>
    <string name="vendors">Vendors</string>
    <string name="eventimage">Event Image</string>
    <string name="editeventImage">Edit Event Image</string>
    <string name="calendaricon">Calendar Icon</string>
    <string name="your_calendar">Your Calendar</string>
    <string name="clockicon">Clock Icon</string>
    <string name="placemarkericon">Place Marker Icon</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="companions">Companions</string>
    <string name="rsvp">RSVP</string>
    <string name="rsvp_text">RSVP: %1$s</string>
    <string name="companions_text">Accompanied by: %1$s</string>
    <string name="floatingactionbuttonguest">Button Guest</string>
    <string name="newguestbutton">New Guest Button</string>
    <string name="new_guest">New Guest</string>
    <string name="new_payment">New Payment</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="fabcontactguest">Contact Guest Button</string>
    <string name="from_contacts">From Contacts</string>
    <string name="add_as_a_guest">Add as a Guest</string>
    <string name="add_as_vendor">Add as Vendor</string>
    <string name="remove_guest">Remove Guest</string>
    <string name="brides_amp_grooms"><![CDATA[Brides & Grooms]]></string>
    <string name="user_name">User Name</string>
    <string name="date">Date </string>
    <string name="signupbutton">Sign Up Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="weddingringslogo">Wedding Rings Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="terms_of_user_and_privacy_policy_agreement"><![CDATA[By signing in, you agree to Brides & Grooms Terms of User and Privacy Policy]]></string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="letsplantogether">Lets Plan Together</string>
    <string name="mailimage">Mail Image</string>
    <string name="submit">Submit</string>
    <string name="forgot_your_email_click_in_here">Forgot your email? Click in here!</string>
    <string name="newtaskpaymentactionbutton">New Task Payment</string>
    <string name="newtaskimagebutton">New Task Button</string>
    <string name="fabpayment">Payment Button</string>
    <string name="more_options">More Options</string>
    <string name="settings">Settings</string>
    <string name="log_off">Log Off</string>
    <string name="newnotebutton">New Note Button</string>
    <string name="phone">Phone</string>
    <string name="phoneimage">Phone Image</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="pending">Pending</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="baby">Baby</string>
    <string name="none">None</string>
    <string name="table">Table</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="googleicon">Google Icon</string>
    <string name="datetime">Date / Time</string>
    <string name="summary">Summary</string>
    <string name="share_note">Share Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="welcome">Welcome</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="are_you_bride_groom">What\'s your role in the wedding?</string>
    <string name="create_an_event">Create an Event</string>
    <string name="what_s_your_event">What\'s your event?</string>
    <string name="what_day_is_your_event">What day is your event?</string>
    <string name="at_what_time">At what time?</string>
    <string name="where_will_you_celebrate">Where will you celebrate?</string>
    <string name="continuemessage">continue</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_due_date">Payment Due Date</string>
    <string name="vendor">Vendor</string>
    <string name="categoryavatar">Category Avatar</string>
    <string name="budget">Budget</string>
    <string name="personal_details">Personal Details</string>
    <string name="role">Role</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logo">Logotype</string>
    <string name="loading">Loading…</string>
    <string name="weddingavatar">Wedding Avatar</string>
    <string name="event_name">Event Name</string>
    <string name="deadline">Deadline</string>
    <string name="guest_information">Guest Information</string>
    <string name="accepticon">Accept Icon</string>
    <string name="accepted">Accepted</string>
    <string name="rejectedicon">Rejected Icon</string>
    <string name="rejected">Rejected</string>
    <string name="pendingicon">Pending Icon</string>
    <string name="location">Location</string>
    <string name="full_address">Full Address</string>
    <string name="amount">Amount</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="_10" translatable="false">10</string>
    <string name="blog_title">Blog Title</string>
    <string name="author">Author</string>
    <string name="time">Time</string>
    <string name="leftparenthesis" translatable="false">(</string>
    <string name="rightparenthesis" translatable="false">)</string>
    <string name="call_vendor">Call Vendor</string>
    <string name="email_vendor">Email Vendor</string>
    <string name="category1">Venue</string>
    <string name="category2">Photo</string>
    <string name="category3">Entertainment</string>
    <string name="category4">Flowers</string>
    <string name="category5">Transportation</string>
    <string name="category6">Ceremony</string>
    <string name="category7">Accessories</string>
    <string name="category8">Beauty</string>
    <string name="category9">Food</string>
</resources>