<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="344dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardlayout"
            android:layout_width="344dp"
            android:layout_height="322dp">

            <ImageView
                android:id="@+id/blogimage"
                android:layout_width="344dp"
                android:layout_height="194dp"
                android:layout_marginTop="72dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardlayout"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/blogimage" />

            <TextView
                android:id="@+id/blogtitle"
                style="@style/Heading6"
                android:layout_width="310dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/blog_title"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/blogimage"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/author"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogimage" />

            <TextView
                android:id="@+id/date"
                style="@style/BodyItalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/date"
                app:layout_constraintEnd_toStartOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/blogimage" />

            <TextView
                android:id="@+id/time"
                style="@style/BodyItalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogimage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>