<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="85dp"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="72dp"
        android:padding="2dp"
        app:cardElevation="3dp"
        android:background="@drawable/rv_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <com.redmadrobot.acronymavatar.AvatarView
        android:id="@+id/contactavatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactname"
        style="@style/BodyNotBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/location"
        android:textColor="@color/rosaChillon"
        app:layout_constraintStart_toEndOf="@+id/contactavatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/payments"
        app:layout_constraintEnd_toStartOf="@+id/textview29"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=":"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toStartOf="@id/paymentscount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintEnd_toStartOf="@+id/textview31"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textview31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toStartOf="@id/paymentsamount"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/paymentsamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentscount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>